  using QGLPixelBuffer for offscreen rendering to a texture switch to using
  QOpenGLFramebufferObject directly instead, for improved performance.
* The default major version of QGLFormat has been changed to 2 to be aligned
  with QSurfaceFormat. Applications that want to use a different version should
  explicitly request it using QGLFormat::setVersion().

QtScript
--------
* [QTBUG-2124]  Added default conversion for long and unsigned long.
* [QTBUG-6133]  Fixed QScriptContextInfo::functionMetaIndex() for overloaded
  slots.
* [QTBUG-15213] Doc: Added missing properties to the ECMAScript reference.
* [QTBUG-15956] Doc: Removed wrong information about Error .stack properties.
* [QTBUG-17915] Fixed a crash when a JS property descriptor was only partially
  defined.
* [QTBUG-18188] Fixed a regression that caused contexts created by
  QScriptEngine::pushContext() to inherit the parent context's scope.
* [QTBUG-18201] Suppressed 'LEAK' messages on stderr at application exit.
* [QTBUG-20378] Fixed QtScriptTools compilation when some features are disabled.
* [QTBUG-20845] Fixed a precision bug in the calculator example.
* [QTBUG-21548] Fixed a crash in QScriptEngineDebugger when the QScriptEngine
  being debugged was deleted.
* [QTBUG-21760] Fixed a crash when accessing QObject properties through an
  activation object.
* [QTBUG-21896] Fixed a crash when converting an invalid JS value to a string.
* [QTBUG-21993] Fixed a bug that caused QObject wrapper objects created with
  the PreferExistingWrapperObject option to not be garbage collected, even if
  the object was not referenced anywhere in the scripting environment.
* [QTBUG-22152] Fixed build issue on Solaris.
* [QTBUG-23871] Fixed a JIT crash on x86-64 caused by out-of-range branch
  instructions.
* [QTBUG-26261] Fixed a crash when a queued signal handler no longer existed.
* [QTBUG-26590] Fixed a bug that caused QObjects with script connections to
  not be garbage collected as expected.

QTestLib
--------