@@ -10248,9 +10248,6 @@ begin_comment
 comment|/*!     \fn QPaintDevice* QGLContext::device() const      Returns the paint device set for this context.      \sa QGLContext::QGLContext() */
 end_comment
 begin_comment
-comment|/*!     \obsolete     \fn void QGLContext::generateFontDisplayLists(const QFont& font, int listBase)      Generates a set of 256 display lists for the 256 first characters     in the font \a font. The first list will start at index \a listBase.      \sa QGLWidget::renderText() */
-end_comment
-begin_comment
 comment|/*****************************************************************************   QGLWidget implementation  *****************************************************************************/
 end_comment
 begin_comment
@@ -11803,308 +11800,6 @@ end_comment
 begin_comment
 comment|/*!     \fn void QGLWidget::setColormap(const QGLColormap& cmap)      Set the colormap for this widget to \a cmap. Usually it is only     top-level widgets that can have colormaps installed.      \sa colormap() */
 end_comment
-begin_comment
-comment|/*!     \obsolete      Returns the value of the first display list that is generated for     the characters in the given \a font. \a listBase indicates the base     value used when generating the display lists for the font. The     default value is 2000.      \note This function is not supported on OpenGL/ES systems. */
-end_comment
-begin_function
-DECL|function|fontDisplayListBase
-name|int
-name|QGLWidget
-operator|::
-name|fontDisplayListBase
-parameter_list|(
-specifier|const
-name|QFont
-modifier|&
-name|font
-parameter_list|,
-name|int
-name|listBase
-parameter_list|)
-block|{
-ifndef|#
-directive|ifndef
-name|QT_OPENGL_ES
-name|Q_D
-argument_list|(
-name|QGLWidget
-argument_list|)
-expr_stmt|;
-name|int
-name|base
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|d
-operator|->
-name|glcx
-condition|)
-block|{
-comment|// this can't happen unless we run out of mem
-return|return
-literal|0
-return|;
-block|}
-comment|// always regenerate font disp. lists for pixmaps - hw accelerated
-comment|// contexts can't handle this otherwise
-name|bool
-name|regenerate
-init|=
-name|d
-operator|->
-name|glcx
-operator|->
-name|deviceIsPixmap
-argument_list|()
-decl_stmt|;
-ifndef|#
-directive|ifndef
-name|QT_NO_FONTCONFIG
-comment|// font color needs to be part of the font cache key when using
-comment|// antialiased fonts since one set of glyphs needs to be generated
-comment|// for each font color
-name|QString
-name|color_key
-decl_stmt|;
-if|if
-condition|(
-name|font
-operator|.
-name|styleStrategy
-argument_list|()
-operator|!=
-name|QFont
-operator|::
-name|NoAntialias
-condition|)
-block|{
-name|GLfloat
-name|color
-index|[
-literal|4
-index|]
-decl_stmt|;
-name|glGetFloatv
-argument_list|(
-name|GL_CURRENT_COLOR
-argument_list|,
-name|color
-argument_list|)
-expr_stmt|;
-name|color_key
-operator|.
-name|sprintf
-argument_list|(
-literal|"%f_%f_%f"
-argument_list|,
-name|color
-index|[
-literal|0
-index|]
-argument_list|,
-name|color
-index|[
-literal|1
-index|]
-argument_list|,
-name|color
-index|[
-literal|2
-index|]
-argument_list|)
-expr_stmt|;
-block|}
-name|QString
-name|key
-init|=
-name|font
-operator|.
-name|key
-argument_list|()
-operator|+
-name|color_key
-operator|+
-name|QString
-operator|::
-name|number
-argument_list|(
-operator|(
-name|int
-operator|)
-name|regenerate
-argument_list|)
-decl_stmt|;
-else|#
-directive|else
-name|QString
-name|key
-init|=
-name|font
-operator|.
-name|key
-argument_list|()
-operator|+
-name|QString
-operator|::
-name|number
-argument_list|(
-operator|(
-name|int
-operator|)
-name|regenerate
-argument_list|)
-decl_stmt|;
-endif|#
-directive|endif
-if|if
-condition|(
-operator|!
-name|regenerate
-operator|&&
-operator|(
-name|d
-operator|->
-name|displayListCache
-operator|.
-name|find
-argument_list|(
-name|key
-argument_list|)
-operator|!=
-name|d
-operator|->
-name|displayListCache
-operator|.
-name|end
-argument_list|()
-operator|)
-condition|)
-block|{
-name|base
-operator|=
-name|d
-operator|->
-name|displayListCache
-index|[
-name|key
-index|]
-expr_stmt|;
-block|}
-else|else
-block|{
-name|int
-name|maxBase
-init|=
-name|listBase
-operator|-
-literal|256
-decl_stmt|;
-name|QMap
-argument_list|<
-name|QString
-argument_list|,
-name|int
-argument_list|>
-operator|::
-name|ConstIterator
-name|it
-decl_stmt|;
-for|for
-control|(
-name|it
-operator|=
-name|d
-operator|->
-name|displayListCache
-operator|.
-name|constBegin
-argument_list|()
-init|;
-name|it
-operator|!=
-name|d
-operator|->
-name|displayListCache
-operator|.
-name|constEnd
-argument_list|()
-condition|;
-operator|++
-name|it
-control|)
-block|{
-if|if
-condition|(
-name|maxBase
-operator|<
-name|it
-operator|.
-name|value
-argument_list|()
-condition|)
-block|{
-name|maxBase
-operator|=
-name|it
-operator|.
-name|value
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-name|maxBase
-operator|+=
-literal|256
-expr_stmt|;
-name|d
-operator|->
-name|glcx
-operator|->
-name|generateFontDisplayLists
-argument_list|(
-name|font
-argument_list|,
-name|maxBase
-argument_list|)
-expr_stmt|;
-name|d
-operator|->
-name|displayListCache
-index|[
-name|key
-index|]
-operator|=
-name|maxBase
-expr_stmt|;
-name|base
-operator|=
-name|maxBase
-expr_stmt|;
-block|}
-return|return
-name|base
-return|;
-else|#
-directive|else
-comment|// QT_OPENGL_ES
-name|Q_UNUSED
-argument_list|(
-name|font
-argument_list|)
-expr_stmt|;
-name|Q_UNUSED
-argument_list|(
-name|listBase
-argument_list|)
-expr_stmt|;
-return|return
-literal|0
-return|;
-endif|#
-directive|endif
-block|}
-end_function
 begin_ifndef
 ifndef|#
 directive|ifndef
@@ -12369,7 +12064,7 @@ begin_comment
 comment|// !QT_OPENGL_ES
 end_comment
 begin_comment
-comment|/*!    Renders the string \a str into the GL context of this widget.     \a x and \a y are specified in window coordinates, with the origin    in the upper left-hand corner of the window. If \a font is not    specified, the currently set application font will be used to    render the string. To change the color of the rendered text you can    use the glColor() call (or the qglColor() convenience function),    just before the renderText() call.     The \a listBase parameter is obsolete and will be removed in a    future version of Qt.     \note This function clears the stencil buffer.     \note This function is not supported on OpenGL/ES systems.     \note This function temporarily disables depth-testing when the    text is drawn.     \note This function can only be used inside a    QPainter::beginNativePainting()/QPainter::endNativePainting() block    if a painter is active on the QGLWidget.     \l{Overpainting Example}{Overpaint} with QPainter::drawText() instead. */
+comment|/*!    Renders the string \a str into the GL context of this widget.     \a x and \a y are specified in window coordinates, with the origin    in the upper left-hand corner of the window. If \a font is not    specified, the currently set application font will be used to    render the string. To change the color of the rendered text you can    use the glColor() call (or the qglColor() convenience function),    just before the renderText() call.     \note This function clears the stencil buffer.     \note This function is not supported on OpenGL/ES systems.     \note This function temporarily disables depth-testing when the    text is drawn.     \note This function can only be used inside a    QPainter::beginNativePainting()/QPainter::endNativePainting() block    if a painter is active on the QGLWidget.     \l{Overpainting Example}{Overpaint} with QPainter::drawText() instead. */
 end_comment
 begin_function
 DECL|function|renderText
@@ -12393,8 +12088,6 @@ specifier|const
 name|QFont
 modifier|&
 name|font
-parameter_list|,
-name|int
 parameter_list|)
 block|{
 ifndef|#
@@ -12769,8 +12462,6 @@ specifier|const
 name|QFont
 modifier|&
 name|font
-parameter_list|,
-name|int
 parameter_list|)
 block|{
 ifndef|#
