@@ -1436,34 +1436,6 @@ literal|0
 return|;
 block|}
 end_function
-begin_function
-DECL|function|generateFontDisplayLists
-name|void
-name|QGLContext
-operator|::
-name|generateFontDisplayLists
-parameter_list|(
-specifier|const
-name|QFont
-modifier|&
-name|fnt
-parameter_list|,
-name|int
-name|listBase
-parameter_list|)
-block|{
-name|Q_UNUSED
-argument_list|(
-name|fnt
-argument_list|)
-expr_stmt|;
-name|Q_UNUSED
-argument_list|(
-name|listBase
-argument_list|)
-expr_stmt|;
-block|}
-end_function
 begin_comment
 comment|/*     QGLTemporaryContext implementation */
 end_comment
